--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>❤️❤️</title>
+    <title>❤️Marcelo❤️</title>
     <link rel="icon" href="https://cdn.goconqr.com/uploads/flash_card/image_question/7187943/desktop_de83cc72-26b2-443c-9ed5-d0f72fcbe8af.png">
     <style>
         *{padding:0;margin:0;}
@@ -37,7 +37,7 @@
 
 <body>
     <h1>
-        <p style="color:rgb(144, 10, 223);">¿Quieres permanecer conmigo toda esta hermosa vida?<br>❤️</p>
+        <p style="color:rgb(144, 10, 223);">¿Quieres ser mi San Valentin?<br>❤️</p>
         <a href="#" class="button" id="si">SI 🥰</a>
         <a href="#" class="button" id="no">NO 😥</a>
     </h1>
@@ -45,23 +45,24 @@
 <script>
     let si=document.getElementById('si');
     si.addEventListener("click",function(e){
-        swal("❤️Gracias mi vida ❤️")
+        swal(" Gracias poto ❤️")
         .then(() => {
-            swal("❤️¿Sabes una cosa?❤️")
+            swal("¿Sabes una cosa?")
             .then(() =>{
-                swal("❤️ Te quiero con todo mi corazon mi niña ❤️")
+                swal("Te amo ❤️")
                 .then(() =>{
-                    swal("❤️ Desde el dia que te conoci >//w//< ❤️")
+                    swal("Me haces muy feliz")
                     .then(() =>{
-                        swal("❤️ Mis dias se volvieron más divertidos a tu lado ❤️")
+                        swal(" Mis dias se volvieron más divertidos a tu lado")
                         .then(() =>{
-                            swal("❤️ Quiero estar todo el tiempo a tu lado mi amor ❤️")
+                            swal("Eres un hombre super importante para mi")
                             .then(() =>{
-                                swal("❤️ Gracias por estar junto a mi ❤️")
+                                swal("A pesar de los altos y bajos, siempre estamos apoyandonos el uno al otro. Te agradezco por nunca haberme dejado sola ❤️")
                                 .then(() =>{
-                                    swal("❤️ Recurda que estas siempre estas en mi corazón ❤️")
+                                    swal(" Gracias por estar a mi lado, soportar mis mañas y apañarme en mis locuras")
                                     .then(()=>{
-                                        swal("❤️ Te amo mucho mi amor, mi niña preciosa, mi reina❤️")
+                                        swal("Estoy orgullosa de ti y recuerda que siempre estare para ti. 
+                                             Te quiero muchisimo ❤️")
                                     });
                                 });
                             });
